--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 }
 
 
-.movieDashboard{
+.detail{
   width: 100%;
   height: 100vh;
   position: relative;
@@ -156,6 +156,10 @@
   height: 350px;
   overflow-y: hidden;
   margin: 0 20px;
+}
+
+.tes {
+  background-color: #000;
 }
 
 .home__boxx {
