--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -9,6 +9,27 @@
     scroll-behavior: smooth;
 }
 
+.search input {
+    height: 100%;
+    width: 100%;
+    background: none;
+    outline: none;
+    border: none;
+    padding-left: 8px;
+    font-family: Montserrat;
+    font-weight: bold;
+    color: #fff;
+}
+
+.search {
+    background: var(--five-color);
+    height: 50px;
+    display: flex;
+    align-items: center;
+    margin: 15px;
+    border-radius: 5px;
+}
+
 .searchh .heading{
     font-size: 16px;
     color: var(--four-color);
