--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,3 +268,24 @@
     display: block;
   }
 }
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+
+.centered {
+  margin: 0 auto;
+  /* padding: 0 1em; */
+  padding-left: 10px;
+}
+
+@media screen and (min-width: 52em) {
+  .centered {
+      max-width: 52em;
+  }
+}
+
+
