feat: add movie trailer to all detail and fixing some bugs in search query

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@
   height: 100vh;
   overflow: hidden;
   background: linear-gradient(211deg,transparent, rgba(0, 0, 0, 0.701), #000);
+  
 }
 
 .movie__content{
@@ -56,6 +57,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  
 }
 
 .name h3{
@@ -64,8 +66,11 @@
 
 .name p{
   line-height: 25px;
+  padding-left: 10px;
   font-size: 16px;
   max-width: 500px;
+  border: 1px none;
+  border-radius: 10px;
 }
 
 .name p span{
@@ -155,6 +160,7 @@
   align-items: center;
   gap: 20px;
   overflow-x: scroll;
+  scroll-snap-type: x mandatory;
   height: 350px;
   overflow-y: hidden;
   margin: 0 20px;
